--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -89,6 +89,10 @@ collections:
               - name: "ctaLink"
                 label: "CTA Link"
                 widget: "string"
+              - name: "ctaLink"
+                label: "CTA Link"
+                widget: "string"
+              
               
       - label: "Список литературы на каникулы"
         name: "list"
