--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -89,6 +89,9 @@ collections:
               - name: "ctaLink"
                 label: "CTA Link"
                 widget: "string"
+                - name: "ctaText"
+                label: "CTA text"
+                widget: "string"
               - name: "ctaLink"
                 label: "CTA Link"
                 widget: "string"
