--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -89,7 +89,20 @@ collections:
               - name: "ctaLink"
                 label: "CTA Link"
                 widget: "string"
+          - label: "CTA"
+            name: "cta"
+            widget: "object"
+            fields:
+              - name: "ctaText"
+                label: "CTA text"
+                widget: "string"
+              - name: "ctaLink"
+                label: "CTA Link"
+                widget: "string"
          
+             
+         
+             
               
               
       - label: "Список литературы на каникулы"
