--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ public_folder: "/assets"
 collections:
   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Posts" # Used in the UI
-    label_singular: "Post" # Used in the UI, ie: "New Post"
+    label_singular: "новость" # Used in the UI, ie: "New Post"
     description: >
       Create awesome content here.
     folder: "src/content/posts"
